--- a/Login/Login.css
+++ b/Login/Login.css
@@ -1,17 +1,42 @@
 html{
     font-size: 62.5%;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 body{
+    position: relative;
     display: flex;
     justify-content: center;
-    align-items:center;
+    align-items: center;
     min-height: 100vh;
+    background: url(img/566159.jpg) no-repeat;
+    background-size: cover;
+
 }
 
 .wrapper{
-    width: 420px;
-    color: #fff;
+    position: absolute;
+    width: 40em;
+    color: #000000;
     text-align: center;
-    background-color: purple;
+    backdrop-filter: blur(10px);
+    box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.5);
+    border-radius: 2em;
+}
+
+.wrapper h1{
+    text-decoration:underline;
+}
+
+.wrapper .input-box{
+    width: 100%;
+    height: 50px;
+}
+
+.input-box input{
+    width: 100%;
+    border-radius: 5em;
+    border: none;
+    outline: none;
+    box-sizing: border-box;
 }
