--- a/Main/Main.css
+++ b/Main/Main.css
@@ -1,18 +1,44 @@
 *{
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+body{
+    background-color: grey;
 }
 
 header{
-    position: fixed;
-    width: 100vw;
+    width: 100%;
+    height: 20vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
+    background-color: black;    
+    color: grey;
 }
 
-.Main-Things{
+main{
     position: relative;
     display: flex;
     justify-content: center;
-    align-items: center;
-    
+    background-color: grey;
+    width:100%;
+    height: 100vh;
 }
 
+.seccion #titulo{
+    text-align: center;
+    margin: 15vh;
+}
+
+.infoPS{
+    display: flex;
+    justify-content: center;
+}
+
+.BOX{
+    border-radius: 4px;
+    margin: 5px;
+    backdrop-filter: blur(20px);
+}
