--- a/Login/Login.css
+++ b/Login/Login.css
@@ -23,8 +23,9 @@ body{
     border-radius: 2em;
 }
 
-.wrapper h1{
-    text-decoration:underline;
+.wrapper img{
+    width: 50px;
+    height: 50px;
 }
 
 .wrapper .input-box{
