--- a/Main/Main.css
+++ b/Main/Main.css
@@ -4,32 +4,35 @@
     padding: 0;
 }
 body{
-    background-color: grey;
+    background-color: rgb(0, 0, 0);
 }
 
 header{
     width: 100%;
-    height: 20vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    background-color: black;    
-    color: grey;
+    height: 25vh;
+    background: url(img/banner.png) no-repeat;
+    background-position: center;
+    background-color: rgb(0, 0, 0);    
 }
 
 main{
-    position: relative;
-    display: flex;
-    justify-content: center;
-    background-color: grey;
-    width:100%;
+    position: absolute;
+    background-color: rgb(0, 0, 0);
+    width:100vw;
     height: 100vh;
+    color: rgb(255, 255, 255);
 }
 
-.seccion #titulo{
-    text-align: center;
-    margin: 15vh;
+.seccion{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.seccion .video{
+    position: relative;
+    margin: 5em;
 }
 
 .infoPS{
@@ -39,6 +42,16 @@ main{
 
 .BOX{
     border-radius: 4px;
-    margin: 5px;
-    backdrop-filter: blur(20px);
+    width: 15em;
+    margin: 3em;
+    padding: 1em;
+    box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.08);
+}
+.BOX #contexto{
+    text-align: center;
+    margin-bottom: 3%;
+}
+
+.video iframe{
+    border-radius: 4px;
 }
