--- a/Main/Main.css
+++ b/Main/Main.css
@@ -12,46 +12,68 @@ header{
     height: 25vh;
     background: url(img/banner.png) no-repeat;
     background-position: center;
-    background-color: rgb(0, 0, 0);    
+    background-color: transparent;
 }
 
 main{
-    position: absolute;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items:start;
     background-color: rgb(0, 0, 0);
-    width:100vw;
-    height: 100vh;
     color: rgb(255, 255, 255);
+}
+
+.aside{
+    display: flex;
+    flex-direction: column;
+    width: 20em;
+    height: 100em;
+    box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.5);
+    text-align: center;
 }
 
 .seccion{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 }
-
 .seccion .video{
-    position: relative;
     margin: 5em;
+    border-radius: 4px;
 }
+
 
 .infoPS{
     display: flex;
     justify-content: center;
 }
 
-.BOX{
+.infoPS img{
+    width: 52em;
+    height: 40em;
+    margin: 3em -1em 3em 3em;
     border-radius: 4px;
-    width: 15em;
-    margin: 3em;
-    padding: 1em;
-    box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.08);
-}
-.BOX #contexto{
-    text-align: center;
-    margin-bottom: 3%;
+    box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.5);
 }
 
-.video iframe{
+.BOX{
     border-radius: 4px;
+    width: 25em;
+    margin: 3em;
+    padding: 2em;
+    box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.5);
+}
+
+.BOX li{
+    padding: 10px;
+}
+
+.BOX h3{
+    text-align: center;
+    margin-bottom: 3em;
+}
+
+.BOX p{
+    margin: 1em;
 }
