--- a/Main/Main.css
+++ b/Main/Main.css
@@ -17,20 +17,11 @@ header{
 
 main{
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items:start;
+    justify-content: center;
+    flex-direction: column;
+    align-items:center;
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
-}
-
-.aside{
-    display: flex;
-    flex-direction: column;
-    width: 20em;
-    height: 100em;
-    box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.5);
-    text-align: center;
 }
 
 .seccion{
@@ -38,31 +29,40 @@ main{
     flex-direction: column;
     align-items: center;
 }
-.seccion .video{
+.seccion .video iframe{
     margin: 5em;
-    border-radius: 4px;
+    border-radius: 10px;
+}
+
+.seccion .video:hover{
+    transform: scale(1.25);
 }
 
 
 .infoPS{
     display: flex;
     justify-content: center;
+    align-items: start;
 }
 
 .infoPS img{
-    width: 52em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40em;
     height: 40em;
-    margin: 3em -1em 3em 3em;
     border-radius: 4px;
     box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.5);
 }
 
 .BOX{
     border-radius: 4px;
-    width: 25em;
+    width: 20em;
+    height: 31em;
     margin: 3em;
     padding: 2em;
     box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.5);
+    font-size: 1.25em;
 }
 
 .BOX li{
@@ -77,3 +77,4 @@ main{
 .BOX p{
     margin: 1em;
 }
+
