--- a/Main/Main.css
+++ b/Main/Main.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: "Outfit", sans-serif;
 }
 body{
     background-color: rgb(0, 0, 0);
@@ -27,9 +30,12 @@ main{
 .seccion{
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
 }
 .seccion .video iframe{
+    width: 40vw;
+    height: 60vh;
     margin: 5em;
     border-radius: 10px;
 }
@@ -43,38 +49,47 @@ main{
     display: flex;
     justify-content: center;
     align-items: start;
-}
-
-.infoPS img{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 40em;
-    height: 40em;
-    border-radius: 4px;
-    box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.5);
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .BOX{
     border-radius: 4px;
-    width: 20em;
-    height: 31em;
+    width: 20vw;
+    height: 75vh;
     margin: 3em;
     padding: 2em;
     box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.5);
-    font-size: 1.25em;
+    font-size: 14px;
 }
 
 .BOX li{
-    padding: 10px;
+    padding: 0.5em;
 }
 
 .BOX h3{
     text-align: center;
-    margin-bottom: 3em;
+    margin-bottom: 1em;
+    font-size: 12px;
 }
 
-.BOX p{
-    margin: 1em;
+.BOX:hover{
+    background-color: #fff;
+    color: black;
 }
 
+@media only screen and (max-width:1250px){
+    h1,p,ul{
+        font-size: 15px;
+    }
+    .BOX{
+        width: 60vw;
+        height: auto;
+        text-align: left;
+    }
+
+    .video iframe{
+        width: 100vw;
+        height: 40vh;
+    }
+}
