--- a/Main/Main.css
+++ b/Main/Main.css
@@ -38,6 +38,7 @@ main{
     height: 60vh;
     margin: 5em;
     border-radius: 10px;
+    box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.5);
 }
 
 .seccion .video:hover{
@@ -56,10 +57,9 @@ main{
 .BOX{
     border-radius: 4px;
     width: 20vw;
-    height: 75vh;
+    height: auto;
     margin: 3em;
     padding: 2em;
-    box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.5);
     font-size: 14px;
 }
 
@@ -70,7 +70,7 @@ main{
 .BOX h3{
     text-align: center;
     margin-bottom: 1em;
-    font-size: 12px;
+    font-size: 15px;
 }
 
 .BOX:hover{
@@ -79,7 +79,7 @@ main{
 }
 
 @media only screen and (max-width:1250px){
-    h1,p,ul{
+    h3,p,ul{
         font-size: 15px;
     }
     .BOX{
@@ -90,6 +90,6 @@ main{
 
     .video iframe{
         width: 100vw;
-        height: 40vh;
+        height: 10vh;
     }
 }
